@startuml

class User {
  - id: int
  - username: string
  - email: string
  - password: string
  - confirmAccount : string
  - roles : string
  - file : string
  - pdf : string
}

class Article {
  - id: int
  - title: string
  - content: string
  - publishedAt: datetime
  - author: int
}

class Comment {
  - id: int
  - content: string
  - postedAt: datetime
  - article: int
  - author: int
  - validate : bool
}

User --> "*" Article
Article --> "*" Comment
Comment --> User

@enduml
